force-app/main/default/objects/Opportunity/fields/Account_Servicing_Office__c.field-meta.xml
<CustomField>
    <fullName>Account_Servicing_Office__c</fullName>
    <formula>TEXT(Account.Branch__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Servicing Office</label>
    <type>Text</type>
</CustomField>