force-app/main/default/objects/Opportunity/fields/Account_Servicing_Sales__c.field-meta.xml
<CustomField>
    <fullName>Account_Servicing_Sales__c</fullName>
    <formula>Account.Owner.FirstName +&quot; &quot;+ Account.Owner.LastName</formula>
    <label>Branch Producing</label>
    <type>Text</type>
</CustomField>