force-app/main/default/objects/Opportunity/fields/Activity_AO__c.field-meta.xml
<CustomField>
    <fullName>Activity_AO__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Direct Selling</fullName>
            </value>
            <value>
                <fullName>Tele RO</fullName>
            </value>
            <value>
                <fullName>Tele Digital</fullName>
            </value>
            <value>
                <fullName>EGC</fullName>
            </value>
            <value>
                <fullName>CGC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>