force-app/main/default/objects/Opportunity/fields/Activity_Formula__c.field-meta.xml
<CustomField>
    <fullName>Activity_Formula__c</fullName>
    <formula>IF( CreatedBy.UserRole.DeveloperName = &quot;BRO&quot;, TEXT(Activity_BRO__c) , TEXT(Activity_AO__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity</label>
    <type>Text</type>
</CustomField>