force-app/main/default/objects/Opportunity/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional</label>
    <type>Text</type>
</CustomField>