force-app/main/default/objects/Opportunity/fields/Additional_notes_facultative__c.field-meta.xml
<CustomField>
    <fullName>Additional_notes_facultative__c</fullName>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>