force-app/main/default/objects/Opportunity/fields/Additional_notes_tobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Additional_notes_tobedeleted__c</fullName>
    <label>Additional notes_tobedeleted</label>
    <type>TextArea</type>
</CustomField>