force-app/main/default/objects/Opportunity/fields/Address_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Company__c</fullName>
    <formula>Account.Address_LU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address of Company</label>
    <type>Text</type>
</CustomField>