force-app/main/default/objects/Opportunity/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Loan Informations</relationshipLabel>
    <relationshipName>Loan_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>