force-app/main/default/objects/Opportunity/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <displayFormat>SF{YYYY}{MM}{DD}{000000}</displayFormat>
    <label>Application ID</label>
    <type>AutoNumber</type>
</CustomField>