force-app/main/default/objects/Opportunity/fields/Approver_CA_Cabang__c.field-meta.xml
<CustomField>
    <fullName>Approver_CA_Cabang__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver CA Cabang</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_CA_Cabang</relationshipName>
    <type>Lookup</type>
</CustomField>