force-app/main/default/objects/Opportunity/fields/Asset_Address__c.field-meta.xml
<CustomField>
    <fullName>Asset_Address__c</fullName>
    <label>Asset Address</label>
    <type>TextArea</type>
</CustomField>