force-app/main/default/objects/Opportunity/fields/Asset_Address_is_same_as__c.field-meta.xml
<CustomField>
    <fullName>Asset_Address_is_same_as__c</fullName>
    <label>Asset Address is same as</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Address</fullName>
            </value>
            <value>
                <fullName>Domicile Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>