force-app/main/default/objects/Opportunity/fields/Asset_City_Kabupaten__c.field-meta.xml
<CustomField>
    <fullName>Asset_City_Kabupaten__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset City/Kabupaten</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Asset_Provinces__c</field>
            <operation>equals</operation>
            <valueField>City_Master_Data__c.Province_Id__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>City_Master_Data__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>