force-app/main/default/objects/Opportunity/fields/Asset_Function__c.field-meta.xml
<CustomField>
    <fullName>Asset_Function__c</fullName>
    <label>Asset Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rumah Tinggal</fullName>
            </value>
            <value>
                <fullName>Kantor</fullName>
            </value>
            <value>
                <fullName>Ruang Usaha</fullName>
            </value>
            <value>
                <fullName>Disewakan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>