force-app/main/default/objects/Opportunity/fields/Asset_Kecamatan2__c.field-meta.xml
<CustomField>
    <fullName>Asset_Kecamatan2__c</fullName>
    <formula>Asset_Kecamatan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Kecamatan</label>
    <type>Text</type>
</CustomField>