force-app/main/default/objects/Opportunity/fields/Asset_Kecamatan__c.field-meta.xml
<CustomField>
    <fullName>Asset_Kecamatan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Kecamatan</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Asset_City_Kabupaten__c</field>
            <operation>equals</operation>
            <valueField>District_Master_Data__c.City_Id__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>District_Master_Data__c</referenceTo>
    <relationshipLabel>Loan Informations (Asset Kecamatan)</relationshipLabel>
    <relationshipName>Loan_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>