force-app/main/default/objects/Opportunity/fields/Asset_Kelurahan__c.field-meta.xml
<CustomField>
    <fullName>Asset_Kelurahan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Kelurahan</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Asset_Kecamatan__c</field>
            <operation>equals</operation>
            <valueField>Sub_District_Master_Data__c.District_Id__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sub_District_Master_Data__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>