force-app/main/default/objects/Opportunity/fields/Asset_Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Asset_Map_URL__c</fullName>
    <label>Asset Map URL</label>
    <type>Url</type>
</CustomField>