force-app/main/default/objects/Opportunity/fields/Asset_Notes__c.field-meta.xml
<CustomField>
    <fullName>Asset_Notes__c</fullName>
    <label>Asset Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>