force-app/main/default/objects/Opportunity/fields/Asset_Provinces__c.field-meta.xml
<CustomField>
    <fullName>Asset_Provinces__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Provinces</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>