force-app/main/default/objects/Opportunity/fields/Asset_RT__c.field-meta.xml
<CustomField>
    <fullName>Asset_RT__c</fullName>
    <label>Asset RT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>