force-app/main/default/objects/Opportunity/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kosong</fullName>
            </value>
            <value>
                <fullName>Disewakan</fullName>
            </value>
            <value>
                <fullName>Ditempati Debitur</fullName>
            </value>
            <value>
                <fullName>Ditempati Keluarga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>