force-app/main/default/objects/Opportunity/fields/asset_types__c.field-meta.xml
<CustomField>
    <fullName>asset_types__c</fullName>
    <label>Asset Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>