force-app/main/default/objects/Opportunity/fields/Assigned_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Underwriting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Underwriting</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>