force-app/main/default/objects/Opportunity/fields/Balance_SKEP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_SKEP_Amount__c</fullName>
    <label>Balance SKEP Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>