force-app/main/default/objects/Opportunity/fields/Banks_Fee_Commission__c.field-meta.xml
<CustomField>
    <fullName>Banks_Fee_Commission__c</fullName>
    <description>Derived from Coverage</description>
    <label>Bank&apos;s Fee Commission</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>