force-app/main/default/objects/Opportunity/fields/Billing_To__c.field-meta.xml
<CustomField>
    <fullName>Billing_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing To NOT USED</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Billing To)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>