force-app/main/default/objects/Opportunity/fields/Billing_To_Text__c.field-meta.xml
<CustomField>
    <fullName>Billing_To_Text__c</fullName>
    <label>Billing To Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>