force-app/main/default/objects/Opportunity/fields/BM_ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>BM_ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BM By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Informations3</relationshipName>
    <type>Lookup</type>
</CustomField>