force-app/main/default/objects/Opportunity/fields/BM_ApprovedDt__c.field-meta.xml
<CustomField>
    <fullName>BM_ApprovedDt__c</fullName>
    <label>BM Approved Date</label>
    <type>DateTime</type>
</CustomField>