force-app/main/default/objects/Opportunity/fields/BM_Role__c.field-meta.xml
<CustomField>
    <fullName>BM_Role__c</fullName>
    <formula>BM_ApprovedBy__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>