force-app/main/default/objects/Opportunity/fields/Broker_Commission__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commission__c</fullName>
    <description>Derived from Coverage</description>
    <label>Broker Commission</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>