force-app/main/default/objects/Opportunity/fields/Bsn_ID__c.field-meta.xml
<CustomField>
    <fullName>Bsn_ID__c</fullName>
    <label>Bsn ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>