force-app/main/default/objects/Opportunity/fields/Building_Occupied_For_Description__c.field-meta.xml
<CustomField>
    <fullName>Building_Occupied_For_Description__c</fullName>
    <label>Building Occupied For (Description)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>