force-app/main/default/objects/Opportunity/fields/Business_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Business_Segmentation__c</fullName>
    <label>Business Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>