force-app/main/default/objects/Opportunity/fields/Busreq_ID__c.field-meta.xml
<CustomField>
    <fullName>Busreq_ID__c</fullName>
    <externalId>true</externalId>
    <label>Busreq ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>