force-app/main/default/objects/Opportunity/fields/CA_ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>CA_ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CA By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Informations6</relationshipName>
    <type>Lookup</type>
</CustomField>