force-app/main/default/objects/Opportunity/fields/CA_ApprovedDt__c.field-meta.xml
<CustomField>
    <fullName>CA_ApprovedDt__c</fullName>
    <label>CA Approved Date</label>
    <type>DateTime</type>
</CustomField>