force-app/main/default/objects/Opportunity/fields/CA_Result__c.field-meta.xml
<CustomField>
    <fullName>CA_Result__c</fullName>
    <label>CA Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>