force-app/main/default/objects/Opportunity/fields/CabangCd__c.field-meta.xml
<CustomField>
    <fullName>CabangCd__c</fullName>
    <defaultValue>&quot;999&quot;</defaultValue>
    <label>Cabang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>