force-app/main/default/objects/Opportunity/fields/Check_Digit_Length__c.field-meta.xml
<CustomField>
    <fullName>Check_Digit_Length__c</fullName>
    <formula>LEN(TEXT(FLOOR(ABS(Digit_16__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Digit Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>