force-app/main/default/objects/Opportunity/fields/Closing_Class__c.field-meta.xml
<CustomField>
    <fullName>Closing_Class__c</fullName>
    <label>Closing Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>MOU</label>
            </value>
            <value>
                <fullName>OrdinaryPolicy</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>OpenCover</fullName>
            </value>
            <value>
                <fullName>CoverNotes</fullName>
            </value>
            <value>
                <fullName>OpenPolicy</fullName>
            </value>
            <value>
                <fullName>MasterPolicy</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Non MOU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>