force-app/main/default/objects/Opportunity/fields/Closing_Info_tobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Closing_Info_tobedeleted__c</fullName>
    <label>Closing Info_tobedeleted</label>
    <type>TextArea</type>
</CustomField>