force-app/main/default/objects/Opportunity/fields/COB__c.field-meta.xml
<CustomField>
    <fullName>COB__c</fullName>
    <label>COB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COB</valueSetName>
    </valueSet>
</CustomField>