force-app/main/default/objects/Opportunity/fields/Commision__c.field-meta.xml
<CustomField>
    <fullName>Commision__c</fullName>
    <label>Commision</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>