force-app/main/default/objects/Opportunity/fields/Commodity_Type__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity Type</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Opportunities (Commodity Type)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>