force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <inlineHelpText>Identify the primary competitor for this opportunity</inlineHelpText>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lala</fullName>
            </value>
            <value>
                <fullName>Yeye</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>