force-app/main/default/objects/Opportunity/fields/Confirmed_by_RI__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_by_RI__c</fullName>
    <label>Confirmed by RI (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>