force-app/main/default/objects/Opportunity/fields/Confirmed_by_RI_Amount__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_by_RI_Amount__c</fullName>
    <formula>Amount * ( Confirmed_by_RI__c /100)</formula>
    <label>Confirmed by RI Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>