force-app/main/default/objects/Opportunity/fields/Confirmed_By_TSI_LOL_Amount_tobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By_TSI_LOL_Amount_tobedeleted__c</fullName>
    <label>Confirmed By TSI LOL Amount_tobedeleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>