force-app/main/default/objects/Opportunity/fields/Confirmed_to_RI__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_to_RI__c</fullName>
    <label>Confirmed to RI (%)</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>