force-app/main/default/objects/Opportunity/fields/Confirmed_To_TSI_LOL_Amount_tobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_To_TSI_LOL_Amount_tobedeleted__c</fullName>
    <label>Confirmed To TSI LOL Amount_tobedeleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>