force-app/main/default/objects/Opportunity/fields/COVERAGE_GROUP_ID_notused__c.field-meta.xml
<CustomField>
    <fullName>COVERAGE_GROUP_ID_notused__c</fullName>
    <label>COVERAGE GROUP ID (not used)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. PSAKI</fullName>
            </value>
            <value>
                <fullName>2. IAR PAR</fullName>
            </value>
            <value>
                <fullName>3. KONSORSIUM</fullName>
            </value>
            <value>
                <fullName>4. LOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>