force-app/main/default/objects/Opportunity/fields/Created_By_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Lintas__c</fullName>
    <label>Created By Lintas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>