force-app/main/default/objects/Opportunity/fields/Customer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rating__c</fullName>
    <label>Customer Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>