force-app/main/default/objects/Opportunity/fields/Decimal_2__c.field-meta.xml
<CustomField>
    <fullName>Decimal_2__c</fullName>
    <label>Decimal 2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>