force-app/main/default/objects/Opportunity/fields/Deliver_To_Text__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To_Text__c</fullName>
    <label>Deliver To Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>