force-app/main/default/objects/Opportunity/fields/Delivery_To__c.field-meta.xml
<CustomField>
    <fullName>Delivery_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery To NOT USED</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Delivery To)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>