force-app/main/default/objects/Opportunity/fields/Description_Business_Interruption__c.field-meta.xml
<CustomField>
    <fullName>Description_Business_Interruption__c</fullName>
    <label>Description Business Interruption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>