force-app/main/default/objects/Opportunity/fields/Description_Material_Damage__c.field-meta.xml
<CustomField>
    <fullName>Description_Material_Damage__c</fullName>
    <label>Description Material Damage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>