force-app/main/default/objects/Opportunity/fields/Digit_16__c.field-meta.xml
<CustomField>
    <fullName>Digit_16__c</fullName>
    <label>Digit 16</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>