force-app/main/default/objects/Opportunity/fields/Done_AKAD__c.field-meta.xml
<CustomField>
    <fullName>Done_AKAD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AKAD</label>
    <type>Checkbox</type>
</CustomField>