force-app/main/default/objects/Opportunity/fields/Done_Komite_Kredit__c.field-meta.xml
<CustomField>
    <fullName>Done_Komite_Kredit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Komite Survey</label>
    <type>Checkbox</type>
</CustomField>