force-app/main/default/objects/Opportunity/fields/Done_Legal_Review__c.field-meta.xml
<CustomField>
    <fullName>Done_Legal_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Review</label>
    <type>Checkbox</type>
</CustomField>