force-app/main/default/objects/Opportunity/fields/Done_Offering_Letter__c.field-meta.xml
<CustomField>
    <fullName>Done_Offering_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offering Letter</label>
    <type>Checkbox</type>
</CustomField>