force-app/main/default/objects/Opportunity/fields/Done_Underwriting_Review__c.field-meta.xml
<CustomField>
    <fullName>Done_Underwriting_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Underwriting Review</label>
    <type>Checkbox</type>
</CustomField>