force-app/main/default/objects/Opportunity/fields/Due_Date_Of_Policy_Payment__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Of_Policy_Payment__c</fullName>
    <label>Due Date Of Policy Payment</label>
    <type>DateTime</type>
</CustomField>