force-app/main/default/objects/Opportunity/fields/Effective_Rate__c.field-meta.xml
<CustomField>
    <fullName>Effective_Rate__c</fullName>
    <label>[Del] Effective Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>