force-app/main/default/objects/Opportunity/fields/End_Date_Periode__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Periode__c</fullName>
    <label>End Date Periode</label>
    <type>Date</type>
</CustomField>