force-app/main/default/objects/Opportunity/fields/Endorse_Note_Change__c.field-meta.xml
<CustomField>
    <fullName>Endorse_Note_Change__c</fullName>
    <label>Endorse Note Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Additional</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Refund</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Prorate</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Full Cancelation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>