force-app/main/default/objects/Opportunity/fields/Endorse_Slip_Number__c.field-meta.xml
<CustomField>
    <fullName>Endorse_Slip_Number__c</fullName>
    <label>Endorse Slip Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>